--- a/yt-recommender/backend/.env.sample
+++ b/yt-recommender/backend/.env.sample
@@ -18,5 +18,9 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:****/auth/google/callback
 
+#email
+PASSWORD = your-email-password
+EMAIL = your-email-address
+
 # Application
 FRONTEND_URL=http://localhost:****
