--- a/yt-recommender/backend/.env.sample
+++ b/yt-recommender/backend/.env.sample
@@ -23,4 +23,4 @@ PASSWORD = your-email-password
 EMAIL = your-email-address
 
 # Application
-FRONTEND_URL=http://localhost:****
+FRONTEND_URL=your-frontend-url
